Created task to search for duplicated ids among relatables